# amber

./: .gitignore  Cargo.toml  README.md  out.vcd  out.vcr
hex/: blink.hex  blink_pwm.hex  blink_timer.hex  blink_timer_interrupt.hex  uart_test.hex
src/: board.rs  component.rs  components.rs  lib.rs  main.rs  mcu.rs  pins.rs  vcd.rs  vcr.rs
src/components/: avr.rs  led.rs  uart.rs
src/components/avr/: bit_helpers.rs  io_controller.rs  mcu.rs  mcu_model.rs  mcu_ticker.rs  regfile.rs  sreg.rs
src/components/avr/io_controller/: gpio.rs  timer16.rs  uart.rs
src/components/avr/mcu/: add_sub.rs  bitops.rs  branches.rs  hex.rs  logical.rs  memory_controller.rs  mul.rs  transfer.rs
src/mcu/: avr.rs
src/mcu/avr/: bit_helpers.rs  io_controller.rs  mcu.rs  mcu_model.rs  mcu_ticker.rs  regfile.rs  sreg.rs
src/mcu/avr/mcu/: add_sub.rs  bitops.rs  branches.rs  logical.rs  memory_controller.rs  mul.rs  transfer.rs
src/vcd/: builder.rs  config.rs  fillers.rs  writer.rs
src/vcr/: builder.rs  config.rs  fillers.rs  writer.rs
