[package]
name = "amber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13.2"
indicatif = "0.17.5"
kanal = "0.1.0-pre8"
mockall = "0.11.4"
timeit = "0.1.2"

[profile.release] 
debug = true
